# manif

./: .codecov.yml  .codedocs  .doxygen.txt  .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  annotated.html  appveyor.yml  doxygen_warnings.txt  files.html  index.html  md_pages_documentation.html  md_pages_projects.html  md_pages_publication.html  modules.html  namespaces.html  package.xml  pages.html  projects.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmark/: CMakeLists.txt  benchmark_manif.cpp  benchmark_quat.cpp  benchmark_rn.cpp  benchmark_se2.cpp  benchmark_se3.cpp  benchmark_se_2_3.cpp  benchmark_so2.cpp  benchmark_so3.cpp  common_benchmark.h
cmake/: manifConfig.cmake.in
cmake/modules/: FindCppAD.cmake  FindEigen3.cmake
cpp/: _bundle_8h.html  _bundle__base_8h.html  _bundle__map_8h.html  _bundle__properties_8h.html  _bundle_tangent_8h.html  _bundle_tangent__base_8h.html  _bundle_tangent__map_8h.html  _interpolation_8md.html  _on-the-use-with-_ceres_8md.html  _quick-start_8md.html  _rn_8h.html  _rn__base_8h.html  _rn__map_8h.html  _rn__properties_8h.html  _rn_tangent_8h.html  _rn_tangent__base_8h.html  _rn_tangent__map_8h.html  _s_e2_8h.html  _s_e2__base_8h.html  _s_e2__map_8h.html  _s_e2__properties_8h.html  _s_e2_tangent_8h.html  _s_e2_tangent__base_8h.html  _s_e2_tangent__map_8h.html  _s_e3_8h.html  _s_e3__base_8h.html  _s_e3__map_8h.html  _s_e3__properties_8h.html  _s_e3_tangent_8h.html  _s_e3_tangent__base_8h.html  _s_e3_tangent__map_8h.html  _s_e__2__3_8h.html  _s_e__2__3__base_8h.html  _s_e__2__3__map_8h.html  _s_e__2__3__properties_8h.html  _s_e__2__3_tangent_8h.html  _s_e__2__3_tangent__base_8h.html  _s_e__2__3_tangent__map_8h.html  _s_gal3_8h.html  _s_gal3__base_8h.html  (+362 more)
cpp/xml/: _bundle_8h.xml  _bundle__base_8h.xml  _bundle__map_8h.xml  (+398 more)
doc/: On-the-use-with-Ceres.md
docs/: Doxyfile  Doxyfile-mcss  Doxyfile-mcss-site  Doxyfile-site  Interpolation.md  conf.py  conf_cpp.py  conf_python.py  fix_latex_color.sh
examples/: CMakeLists.txt  bundle_sam.cpp  se2_Bezier.cpp  se2_DeCasteljau.cpp  se2_average.cpp  se2_cn_smooth.cpp  se2_interpolation.cpp  se2_localization.cpp  se2_localization.py  se2_localization_iekf.cpp  se2_localization_liekf.cpp  se2_localization_riekf.cpp  se2_localization_ukfm.cpp  se2_points_generator.h  se2_sam.cpp  se2_sam.py  se2_smooth_trajectory.cpp  se3_localization.cpp  se3_localization.py  se3_localization_iekf.cpp  se3_sam.cpp  se3_sam.py  se3_sam_selfcalib.cpp  se3_sam_selfcalib.py  se_2_3_localization.cpp  se_2_3_localization.py  so2_average.cpp
examples/scripts/: plot_interpolation.m  plot_se2_curves.py  plot_se2_interpolation.m  plot_trajectory.py
paper/: paper.bib  paper.md
python/: CMakeLists.txt  bindings_eigen_quaternion.cpp  bindings_lie_group_base.h  bindings_manif.cpp  bindings_optional.h  bindings_rn.cpp  bindings_se2.cpp  bindings_se3.cpp  bindings_se_2_3.cpp  bindings_sgal3.cpp  bindings_so2.cpp  bindings_so3.cpp  bindings_tangent_base.h  classes.html  index.html  manifpy.R1.html  manifpy.R1Tangent.html  manifpy.R2.html  manifpy.R2Tangent.html  manifpy.R3.html  manifpy.R3Tangent.html  manifpy.R4.html  manifpy.R4Tangent.html  manifpy.R5.html  manifpy.R5Tangent.html  manifpy.R6.html  manifpy.R6Tangent.html  manifpy.R7.html  manifpy.R7Tangent.html  manifpy.R8.html  manifpy.R8Tangent.html  manifpy.R9.html  manifpy.R9Tangent.html  manifpy.SE2.html  manifpy.SE2Tangent.html  manifpy.SE3.html  manifpy.SE3Tangent.html  manifpy.SE_2_3.html  manifpy.SE_2_3Tangent.html  manifpy.SO2.html  (+39 more)
src/: dummy.cpp  localization.cpp
test/: CMakeLists.txt  common_tester.h  eigen_gtest.h  gtest_eigen_utils.h  gtest_manif_utils.h  gtest_misc.cpp  gtest_so2.cpp  gtest_so2_base_template.cpp  gtest_so2_map.cpp  gtest_so2_tangent.cpp  gtest_so2_tangent_base_template.cpp  gtest_so2_tangent_map.cpp  gtest_so3.cpp  gtest_test.cpp  test_func.h  test_utils.h
test/autodiff/: CMakeLists.txt  gtest_autodiff.cpp  gtest_autodiff_reverse.cpp  gtest_common_tester_autodiff.h
test/bundle/: CMakeLists.txt  gtest_bundle.cpp  gtest_bundle_large.cpp  gtest_bundle_single_group.cpp
test/ceres/: CMakeLists.txt  ceres_test_utils.h  gtest_bundle_ceres.cpp  gtest_rn_ceres.cpp  gtest_rxso2_ceres.cpp  gtest_rxso3_ceres.cpp  gtest_se23_ceres.cpp  gtest_se2_autodiff.cpp  gtest_se2_ceres.cpp  gtest_se2_ceres_autodiff.cpp  gtest_se3_ceres.cpp  gtest_sgal3_ceres.cpp  gtest_sim2_ceres.cpp  gtest_sim3_ceres.cpp  gtest_so2_analytic.cpp  gtest_so2_autodiff.cpp  gtest_so2_ceres.cpp  gtest_so2_local_parametrization.cpp  gtest_so3_ceres.cpp  so2_local_parametrization.h
test/cppad/: CMakeLists.txt  gtest_common_tester_cppad.h  gtest_cppad.cpp
test/dhu/: CMakeLists.txt  gtest_dhu.cpp
test/gtest/: CMakeLists.txt  CMakeLists.txt.in
test/python/: CMakeLists.txt  pytest_manif.py  pytest_se2.py  pytest_se3.py  pytest_se_2_3.py  pytest_so2.py  pytest_so3.py  test_eigen_quaternion.py  test_manif.py  test_se2.py  test_se3.py  test_se_2_3.py  test_sgal3.py  test_so2.py  test_so3.py
test/python/.cache/v/cache/: lastfailed
test/rn/: CMakeLists.txt  gtest_rn.cpp
test/rxso2/: CMakeLists.txt  gtest_rxso2.cpp
test/rxso3/: CMakeLists.txt  gtest_rxso3.cpp
test/se2/: CMakeLists.txt  gtest_se2.cpp  gtest_se2_map.cpp  gtest_se2_tangent.cpp  gtest_se2_tangent_map.cpp
test/se3/: CMakeLists.txt  gtest_se3.cpp
test/se_2_3/: CMakeLists.txt  gtest_se_2_3.cpp
test/sgal3/: CMakeLists.txt  gtest_sgal3.cpp
test/sim2/: CMakeLists.txt  gtest_sim2.cpp
test/sim3/: CMakeLists.txt  gtest_sim3.cpp
test/so2/: CMakeLists.txt  gtest_so2.cpp  gtest_so2_base_template.cpp  gtest_so2_map.cpp  gtest_so2_tangent.cpp  gtest_so2_tangent_base_template.cpp  gtest_so2_tangent_map.cpp
test/so3/: CMakeLists.txt  gtest_so3.cpp
xml/: _r_e_a_d_m_e_8md.xml  dir_208d2690607c4e3d3fabfa1d18673d36.xml  documentation_8md.xml  index.xml  indexpage.xml  md_pages_documentation.xml  md_pages_projects.xml  md_pages_publication.xml  projects_8md.xml  publication_8md.xml
(+422 files in other folders)
